--- a/car-mng-app/src/app/history-search/history-search.component.html
+++ b/car-mng-app/src/app/history-search/history-search.component.html
@@ -39,374 +39,74 @@
   </div>
 
 
-  <!-- <div style="display: flex;">
-        <input type="text" class="datepicker form-control" id="fromDt">
-        <span style="margin-top: 5px; font-weight: bold;">&nbsp;&nbsp;~&nbsp;&nbsp;</span>
-        <input type="text" class="datepicker form-control" id="toDt">
-      </div> -->
+  <div class="mat-elevation-z8" style="margin-top: 20px;">
+    <table mat-table [dataSource]="dataSource" style="width: 100%;">
 
-  <h2 style="margin-top: 20px;">Record</h2>
-  <div class="table-responsive">
-    <table class="table table-striped table-hover table-bordered table-sm" style="min-width: 1200px;" id="table"
-      data-toggle="table" data-sort-class="table-active" data-sortable="true">
-      <thead>
-        <tr>
-          <th><input type="checkbox"></th>
-          <th data-field="num" data-sortable="true">#&nbsp;&nbsp;&nbsp;</th>
-          <th data-field="date" data-sortable="true">사용일자</th>
-          <th>소속</th>
-          <th>운전자</th>
-          <th>사용형태</th>
-          <th>사용유형</th>
-          <th>사용목적</th>
-          <th>주행거리</th>
-          <th>누적주행거리</th>
-          <th>목적지</th>
-          <th>경유지</th>
-          <th>주유내역</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td><input type="checkbox"></td>
-          <td>1</td>
-          <td>2019-02-01~2019-02-02</td>
-          <td>APP서비스그룹</td>
-          <td>손병철</td>
-          <td>업무용</td>
-          <td>회의 참석</td>
-          <td>발주처 워크샵 참여</td>
-          <td>5,00 KM</td>
-          <td>2,000 KM</td>
-          <td>속초</td>
-          <td>명동</td>
-          <td>60 L</td>
-        </tr>
-        <tr>
-          <td><input type="checkbox"></td>
-          <td>2</td>
-          <td>2019-02-05</td>
-          <td>APP서비스그룹</td>
-          <td>손병철</td>
-          <td>업무용</td>
-          <td>거래처, 대리점 방문</td>
-          <td>프로젝트 관련 발주처 업무 협의</td>
-          <td>40 KM</td>
-          <td>2,040 KM</td>
-          <td>토파즈</td>
-          <td>-</td>
-          <td>- L</td>
-        </tr>
-        <tr>
-          <td><input type="checkbox"></td>
-          <td>3</td>
-          <td>2019-02-19</td>
-          <td>APP서비스그룹</td>
-          <td>고정민</td>
-          <td>업무용</td>
-          <td>출, 퇴근</td>
-          <td>야간 작업 후 출, 퇴근</td>
-          <td>30 KM</td>
-          <td>2,070 KM</td>
-          <td>방배동</td>
-          <td>-</td>
-          <td>- L</td>
-        </tr>
-        <tr>
-          <td><input type="checkbox"></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td><input type="checkbox"></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td><input type="checkbox"></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td><input type="checkbox"></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td><input type="checkbox"></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td><input type="checkbox"></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td><input type="checkbox"></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td><input type="checkbox"></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-      </tbody>
+      <ng-container matColumnDef="useDate">
+        <th mat-header-cell *matHeaderCellDef> 사용일자 </th>
+        <td mat-cell *matCellDef="let element"> {{element.useDate}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="driverDep">
+        <th mat-header-cell *matHeaderCellDef> 소속 </th>
+        <td mat-cell *matCellDef="let element"> {{element.driverDep}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="driverNm">
+        <th mat-header-cell *matHeaderCellDef> 운전자 </th>
+        <td mat-cell *matCellDef="let element"> {{element.driverNm}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="bizOrNot">
+        <th mat-header-cell *matHeaderCellDef> 사용형태 </th>
+        <td mat-cell *matCellDef="let element"> {{element.bizOrNot}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="useType">
+        <th mat-header-cell *matHeaderCellDef> 사용유형 </th>
+        <td mat-cell *matCellDef="let element"> {{element.useType}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="usePurpose">
+        <th mat-header-cell *matHeaderCellDef> 사용목적 </th>
+        <td mat-cell *matCellDef="let element"> {{element.usePurpose}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="mileage">
+        <th mat-header-cell *matHeaderCellDef> 주행거리(KM) </th>
+        <td mat-cell *matCellDef="let element"> {{element.mileage}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="accumMileage">
+        <th mat-header-cell *matHeaderCellDef> 누적주행거리(KM) </th>
+        <td mat-cell *matCellDef="let element"> {{element.accumMileage}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="destination">
+        <th mat-header-cell *matHeaderCellDef> 목적지 </th>
+        <td mat-cell *matCellDef="let element"> {{element.destination}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="dropBy">
+        <th mat-header-cell *matHeaderCellDef> 경유지 </th>
+        <td mat-cell *matCellDef="let element"> {{element.dropBy}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="fueling">
+        <th mat-header-cell *matHeaderCellDef> 주유내역(L) </th>
+        <td mat-cell *matCellDef="let element"> {{element.fueling}} </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
+
+    <mat-paginator [pageSizeOptions]="[20, 40]" showFirstLastButtons></mat-paginator>
   </div>
 
-  <br>
-
-  <nav aria-label="Page navigation">
-    <ul class="pagination justify-content-end">
-      <li class="page-item disabled">
-        <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
-      </li>
-      <li class="page-item"><a class="page-link" href="#">1</a></li>
-      <li class="page-item"><a class="page-link" href="#">2</a></li>
-      <li class="page-item"><a class="page-link" href="#">3</a></li>
-      <li class="page-item">
-        <a class="page-link" href="#">Next</a>
-      </li>
-    </ul>
-  </nav>
-
-  <div class="row justify-content-center">
+  <div class="row justify-content-center" style="margin-top: 30px;">
     <button id="fix" class="btn btn-md btn-primary" type="submit" style="margin: 5px;">수정</button>
     <button id="deleteRqt" class="btn btn-md btn-primary" type="submit" style="margin: 5px;">삭제요청</button>
     <button id="closePage" class="btn btn-md btn-primary" type="submit" style="margin: 5px;">닫기</button>
   </div>
 </div>
-
-<script src="./js/datepicker.js"></script>
-<!-- <script>
-
-        var expectedData = [
-            { no: 1, date: '2019-02-01', group: 'APP서비스그룹', driver: '손병철' },
-            { no: 2, date: '2019-02-02', group: 'APP서비스그룹', driver: '허대영' },
-        ];
-
-        var expectedData2 = [
-            { no: 1, date: '2019-02-01', group: 'APP서비스그룹', driver: '손병철' },
-            { no: 2, date: '2019-02-02', group: 'APP서비스그룹', driver: '허대영' },
-            { no: 3, date: '2019-02-01', group: 'APP서비스그룹', driver: '최규범' },
-            { no: 4, date: '2019-02-02', group: 'APP서비스그룹', driver: '최경미s' },
-        ];
-
-        var getDate = function () {
-            var today = new Date();
-            var dd = today.getDate();
-            var mm = today.getMonth() + 1; //January is 0!
-            var yyyy = today.getFullYear();
-            if (dd < 10) {
-                dd = '0' + dd;
-            }
-
-            if (mm < 10) {
-                mm = '0' + mm;
-            }
-            return mm + '/' + dd + '/' + yyyy;
-        }
-
-        var getDatetime = function () {
-            var today = new Date();
-            var dd = today.getDate();
-            var mm = today.getMonth() + 1; //January is 0!
-            var yyyy = today.getFullYear();
-            if (dd < 10) {
-                dd = '0' + dd;
-            }
-
-            if (mm < 10) {
-                mm = '0' + mm;
-            }
-            return mm + '/' + dd + '/' + yyyy + today.getTime();
-        }
-
-        $(document).ready(function () {
-
-            $('#fromDt').val(getDate());
-            $('#toDt').val(getDate());
-
-            var numbers = [
-                "12 하1234",
-                "12 하122kjhuikhiuhukhiu",
-            ]
-
-            var numbers2 = [
-                "12 dsfasdfasd하1234",
-                "12 하122kasdfasdfasdfjhuikhiuhukhiu",
-            ]
-
-            $.each(numbers, function (val, text) {
-                $('#selectCarNum').append($('<option></option>').val(val).html(text))
-            }); // there was also a ) missing here
-
-        });
-
-        $('#searchBtn').click(function () {
-            alert('검색 버튼');
-            var data = [
-                {
-                    id: 1,
-                    firstName: "Peter",
-                    lastName: "Jhons"
-                },
-                {
-                    id: 2,
-                    firstName: "David",
-                    lastName: "Bowie"
-                }
-            ];
-            drawRow(data);
-        });
-
-        $('#fix').click(function () {
-            alert('수정 버튼');
-        });
-
-        $('#deleteRqt').click(function () {
-            alert('삭제요청 버튼');
-        });
-
-        $('#closePage').click(function () {
-            alert('닫기 버튼');
-        });
-
-
-
-
-        $.ajax({
-            url: 'https://jwt-backend-test.herokuapp.com/rest/',
-            type: "post",
-            dataType: "json",
-            data: {
-                json: JSON.stringify([
-                    {
-                        id: 1,
-                        firstName: "Peter",
-                        lastName: "Jhons"
-                    },
-                    {
-                        id: 2,
-                        firstName: "David",
-                        lastName: "Bowie"
-                    }
-                ]),
-                delay: 3
-            },
-            success: function (data, textStatus, jqXHR) {
-                // since we are using jQuery, you don't need to parse response
-                drawTable(data);
-            }
-        });
-
-        function drawTable(data) {
-            for (var i = 0; i < data.length; i++) {
-                drawRow(data[i]);
-            }
-        }
-
-        function drawRow(rowData) {
-
-            for (var i = 0; rowData.length > i; i++) {
-                var row = $("<tr/>")
-                $("#test").append(row); //this will append tr element to table... keep its reference for a while since we will add cels into it
-
-                row.append($("<td>" + rowData[i].id + "</td>"));
-                row.append($("<td>" + rowData[i].firstName + "</td>"));
-                row.append($("<td>" + rowData[i].lastName + "</td>"));
-                row.append($("<td>" + rowData[i].xx + "</td > "));
-                row.append($("<td>" + rowData[i].xx + "</td > "));
-                row.append($("<td>" + rowData[i].xx + "</td > "));
-                row.append($("<td>" + rowData[i].xx + "</td > "));
-                row.append($("<td>" + rowData[i].xx + "</td > "));
-                row.append($("<td>" + rowData[i].xx + "</td > "));
-                row.append($("<td>" + rowData[i].xx + "</td > "));
-                row.append($("<td>" + rowData[i].xx + "</td > "));
-                row.append($("<td>" + rowData[i].xx + "</td > "));
-                row.append($("<td>" + rowData[i].xx + "</td > "));
-            }
-        }
-</script> -->
